--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Hello</title>
+    <style>
+body{
+    /*background-color: lightcyan;*/
+    background-image: url("resources/IMG_3090.JPG");
+
+}
+        .container-fluid{
+            text-align: center;
+        }
+        .col,.col-md-1{
+            margin-top: 2px;
+        }
+    </style>
 </head>
 <body>
-    <h2>Hello World!</h2>
+    <%@ include file="Menu.jsp"%>
+<!--<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-1">
+            <div class="alert alert-primary" role="alert">
+                HOME
+            </div>
+        </div>
+        <div class="col">
+
+        </div>
+        <div class="col">
+            <div class="alert alert-primary" role="alert">
+                    About me
+            </div>
+        </div>
+        <div class="col">
+            <div class="alert alert-primary" role="alert">
+                    Projects
+            </div>
+        </div>
+        <div class="col">
+            <div class="alert alert-primary" role="alert">
+                    Contact
+            </div>
+        </div>
+        <div class="col">
+        </div>
+    </div>
+</div>-->
+<div>
+    <img src="\resources\street-238458.jpg">
+</div>
+
+
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
